<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="name">Name</string>
    <string name="oblicz">Oblicz</string>
    <string name="podaj_kwot">Podaj kwotę</string>
    <string name="wpisz_kwot_aby_obliczy_napiwek">Wpisz kwotę aby obliczyć napiwek.</string>
    <string name="stopien_zadowolenia">Jak wypadła obsługa?</string>
    <string name="ocena1">Super (20%)</string>
    <string name="ocena2">OK (15%)</string>
    <string name="ocena3">Może być (10%)</string>
    <string name="zaokr">Zaokrąglij w górę.</string>
    <string name="sugerowany_napiwek">Sugerowany napiwek:</string>
    <string name="naci_nij_oblicz">Naciśnij oblicz.</string>

</resources>